# golem-riscv-sim

./: .gitignore  .gitmodules  README.md  bootstrap.sh
bridge/: README.md
build-scripts/: build-llvm.sh  build-platform.sh  build-qemu.sh  build-runtime.sh  build-sst-core.sh  build-sst-elements.sh  check-dependencies.sh  common.sh  prepare-qemu.sh  prepare-sst-elements.sh
components/elements/mittens/: Makefile.am  README.md  packetEvent.h  qemuProcess.cc  qemuProcess.h  sharedMemoryBridge.cc  sharedMemoryBridge.h  tile.cc  tile.h
components/elements/mittens/tests/: component_lifecycle.py  multi_tile_boot.py  qemu_boot.py  run-test.sh  two_tile_bridge.py
config/: toolchain.env  versions.env
docs/: architecture.md  building.md  platform-v0.md  testing.md  timing-model.md
emulation/: five-core-openmp.cpp  hundred-core-openmp.cpp  init.cpp
patches/: riscv-gnu-toolchain-stage2-posix.patch
patches/qemu/: 0001-register-mittens-nic-build.patch  0002-attach-mittens-nic-to-riscv-virt.patch
platform/: crt0.S  mesh-nic.h  platform-exit.cpp  platform.h  tile.ld  uart.cpp
runtime/: README.md
runtime/src/: ready_queue.cpp  task_instance.cpp  task_registry.cpp  transport.cpp
runtime/tests/: run-test.sh  runtime_test.cpp
scripts/: build-initramfs.sh  build-kernel.sh  build-libomp.sh  build-llvm.sh  build-musl-toolchain.sh  build-sst-core.sh  build-sst-elements.sh  fetch-kernel.sh  run-qemu.sh
tests/distributed-matvec/: compare-mappings.sh  main.cpp  run-test.sh  simulation.py
tests/hello/: main.cpp  run-test.sh
toolchain/: golem-clang
(+29 files in other folders)
